# data-driven-model

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  package.xml  run.sh  setup.py
core/: eval.py  train.py
launch/: car_mpc.launch  foxglove_bridge.launch
ros_environment/: Dockerfile  docker-compose.yml  requirements.txt
ros_environment/config/: car_mpc.rviz
ros_environment/src/: car_mpc.py  car_state_publisher.py  circular_trajectory.py  trajectory_generator.py
src/: car_mpc.py  car_mpc_controller.py  car_state_publisher.py  circular_trajectory.py
urdf/: car.urdf
