<?xml version="1.0"?>
<package format="2">
  <name>car_mpc_control</name>
  <version>0.1.0</version>
  <description>Data-driven MPC for autonomous vehicle control</description>

  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf</depend>
  <depend>foxglove_bridge</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-sklearn</exec_depend>
  <exec_depend>python3-casadi</exec_depend>
</package> 